# lunacy

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  bench.lua  call_test.rs  call_test.s  dump.lua  hyperfine-binarytrees.md  hyperfine-nbody-jit.md  hyperfine-nbody.md  hyperfine.md  test.lua  test_jit.lua  testcase.lua
lua_tests/: test_02.lua  test_03.lua  test_04.lua  test_05.lua  test_06.lua  test_07.lua  test_08.lua  test_09.lua  test_10.lua  test_11.lua  test_12.lua  test_13.lua  test_14.lua  test_15.lua  test_16.lua  test_17.lua  test_18.lua  test_19.lua  test_20.lua  test_21.lua  test_22.lua  test_23.lua  test_24.lua  test_25.lua  test_26.lua  test_27.lua  test_29.lua  test_30.lua  test_31.lua  test_32.lua
src/: chunk.rs  generator.rs  generator.rs.bak  jit.rs  lib.rs  main.rs  perf.rs  stack.rs  vm.rs
tests/: golden_tests.rs
