[package]
name = "lunacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.17.0"
log = "0.4.22"
nom = "7.1.3"
rustc-hash = "2.0.0"
mimalloc = "0.1"
env_logger = "0.11.5"
internment = { version = "0.8.6", features = ["arena"] }

[profile.release]
codegen-units = 1
panic = "abort"
debug = true
lto = "fat"
