[package]
name = "lunacy"
version = "0.1.0"
edition = "2021"

[features]
skip_rc = []
skip_vec = []
sonic = ["skip_rc", "skip_vec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.17.0"
log = { version = "0.4.22", features = ["release_max_level_off"] }
nom = "7.1.3"
rustc-hash = "2.0.0"
mimalloc = "0.1"
env_logger = "0.11.5"
internment = { version = "0.8.6", features = ["arena"] }
typewit = "1.9.0"
qcell = "0.5.4"

[target.sandbox]


[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
strip = false
debug = true
