cargo-features = ["panic-immediate-abort"]
[package]
name = "lunacy"
version = "0.1.0"
edition = "2024"

[features]
default = ["counters", "jit", "magic"]
skip_rc = []
skip_vec = []
counters = []
graph = []
immediate_jit = []
jit = []
unreachable = []
gas = []
magic = [] # Magic JIT intrinsics
perf = [] # Create perf JIT map file
unsafe = ["jit", "skip_vec", "unreachable"]
sonic = ["unsafe", "skip_rc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.17.0"
log = { version = "0.4.22", features = ["release_max_level_off"] }
nom = "7.1.3"
rustc-hash = "2.0.0"
mimalloc = "0.1"
env_logger = "0.11.10"
internment = { version = "0.8.6", features = ["arena"] }
typewit = "1.9.0"
qcell = "0.5.4"
graphviz-rust = { version = "0.4.0" }
indexmap = "2.14.0"
dynasm = "5.0.0"
dynasmrt = { version = "5.0.0", path = "./dynasm-rs/runtime" }
memmap2 = { version = "0.9.10", path = "./memmap2-rs" }
smallvec = "1.15.1"
rsprocmaps = "0.3.2"

[target.sandbox]

[target.jit]
[target.jit.dependencies]

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
strip = false
debug = true

[profile.unsafe]
inherits = "release"
panic = "immediate-abort"
